# graphs_analysis

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: boruvka_spla.yml  ci.yml
boruvka/boruvka_spark/: Makefile  README.md  build.sbt
boruvka/boruvka_spark/src/main/resources/: log4j2.properties
boruvka/boruvka_spark/src/main/scala/boruvka/: Boruvka.scala  Main.scala
boruvka/boruvka_spark/src/test/scala/boruvka/: BoruvkaTest.scala
boruvka/boruvka_spla/: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
boruvka/boruvka_spla/cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  variables.cmake
boruvka/boruvka_spla/src/: boruvka_classic.cpp  lib.cpp  lib.hpp  main.cpp
boruvka/boruvka_spla/test/: CMakeLists.txt  lib_test.cpp  test_lib.cpp
boruvka/boruvka_spla/test/src/: boruvka_spla_test.cpp
boruvka/datasets/: test_graph.mtx
boruvka/experiment_graph_types/: experiment.ipynb
boruvka/experiment_graph_types/results/: spark_USA-road-d.COL.csv  spark_USA-road-d.NY.csv  spark_ca-MathSciNet.csv  spark_ca-citeseer.csv  spark_delaunay_n17.csv  spark_delaunay_n18.csv  spark_delaunay_n19.csv  spark_delaunay_n20.csv  spark_delaunay_n21.csv  spark_road-belgium-osm.csv  spark_road-luxembourg-osm.csv  spark_road-roadNet-CA.csv  spark_road-roadNet-PA.csv  spark_road-usroads-48.csv  spark_road-usroads.csv  spark_soc-LiveMocha.csv  spark_soc-flickr-und.csv  spark_soc-flickr.csv  spark_soc-lastfm.csv  spark_soc-sign-epinions.csv  spla_USA-road-d.COL.csv  spla_USA-road-d.NY.csv  spla_ca-MathSciNet.csv  spla_ca-citeseer.csv  spla_delaunay_n17.csv  spla_delaunay_n18.csv  spla_delaunay_n19.csv  spla_delaunay_n20.csv  spla_delaunay_n21.csv  spla_road-belgium-osm.csv  spla_road-luxembourg-osm.csv  spla_road-roadNet-CA.csv  spla_road-roadNet-PA.csv  spla_road-usroads-48.csv  spla_road-usroads.csv  spla_soc-LiveMocha.csv  spla_soc-flickr-und.csv  spla_soc-flickr.csv  spla_soc-lastfm.csv  spla_soc-sign-epinions.csv
boruvka/graphs/: .gitignore  add_weights.py  download_graphs.py  gr_to_mtx.py  graphs.yaml  test_graph.mtx  two_components_path.mtx  unweighted_path4.mtx
experiments/: experiment.ipynb
experiments/results/: spark-amazon0601.csv  spark-cit-Patents.csv  spark-citationCiteseer.csv  spark-coPapersDBLP.csv  spark-in-2004.csv  spla-cpu-amazon0601.csv  spla-cpu-cit-Patents.csv  spla-cpu-citationCiteseer.csv  spla-cpu-coPapersDBLP.csv  spla-cpu-in-2004.csv  spla-intel-amazon0601.csv  spla-intel-cit-Patents.csv  spla-intel-citationCiteseer.csv  spla-intel-coPapersDBLP.csv  spla-intel-in-2004.csv  spla-nvidia-amazon0601.csv  spla-nvidia-cit-Patents.csv  spla-nvidia-citationCiteseer.csv  spla-nvidia-coPapersDBLP.csv  spla-nvidia-in-2004.csv  spla-pocl-amazon0601.csv  spla-pocl-cit-Patents.csv  spla-pocl-citationCiteseer.csv  spla-pocl-coPapersDBLP.csv  spla-pocl-in-2004.csv
slides/: boruvka_presentation_1.md  boruvka_presentation_2.md
